--- a/BaseGUI/.classpath
+++ b/BaseGUI/.classpath
@@ -3,5 +3,8 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="lib" path="D:/mysql-connector-java-5.1.39/mysql-connector-java-5.1.39-bin.jar"/>
+	<classpathentry kind="lib" path="D:/poi-3.15/poi-3.15.jar"/>
+	<classpathentry kind="lib" path="D:/poi-3.15/poi-ooxml-3.15.jar"/>
+	<classpathentry kind="lib" path="D:/poi-3.15/poi-ooxml-schemas-3.15.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
