--- a/BaseGUI/pom.xml
+++ b/BaseGUI/pom.xml
@@ -13,6 +13,10 @@
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 		</dependency>
+		<dependency>
+		  <groupId>com.jfoenix</groupId>
+		  <artifactId>jfoenix</artifactId>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
@@ -25,6 +29,11 @@
 				<groupId>mysql</groupId>
 				<artifactId>mysql-connector-java</artifactId>
 				<version>5.1.6</version>
+			</dependency>
+			<dependency>
+			  <groupId>com.jfoenix</groupId>
+			  <artifactId>jfoenix</artifactId>
+			  <version>1.2.0</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
